--- a/x360ce.App.Beta/Resources/Icons/NavActive.xaml
+++ b/x360ce.App.Beta/Resources/Icons/NavActive.xaml
@@ -1,11 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 	<Viewbox x:Key="NavUpActive" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg103"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -22,7 +18,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g101">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -48,11 +44,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavLeftActive" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg165"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -69,7 +61,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g163">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -95,18 +87,14 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavActive" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg9"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g7">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -122,11 +110,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavRightActive" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg57"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -143,7 +127,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g55">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -169,11 +153,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavDownActive" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg119"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -190,7 +170,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g117">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -214,12 +194,9 @@
 			</Canvas>
 		</Canvas>
 	</Viewbox>
+
 	<Viewbox x:Key="NavAxisActive" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg16"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -235,7 +212,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g14">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M192 480l0 -160l-160 0l0 -128l160 0l0 -160l128 0l0 160l160 0l0 128l-160 0l0 160z"
@@ -250,6 +227,33 @@
 		</Canvas>
 	</Viewbox>
 
-
+	<Viewbox x:Key="NavTriggerActive" x:Shared="False" Stretch="Uniform">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
+			<Canvas.RenderTransform>
+				<TranslateTransform X="0" Y="0" />
+			</Canvas.RenderTransform>
+			<Canvas.Resources>
+				<LinearGradientBrush xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Key="color-1" MappingMode="Absolute" StartPoint="0,-160" EndPoint="291,269">
+					<LinearGradientBrush.GradientStops>
+						<GradientStopCollection>
+							<GradientStop Offset="0" Color="#98E957" />
+							<GradientStop Offset="1" Color="#5EA821" />
+						</GradientStopCollection>
+					</LinearGradientBrush.GradientStops>
+				</LinearGradientBrush>
+			</Canvas.Resources>
+			<!--  Unknown tag: metadata  -->
+			<!--  Unknown tag: sodipodi:namedview  -->
+			<Canvas>
+				<Rectangle
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					Canvas.Left="32"
+					Canvas.Top="192"
+					Width="448"
+					Height="128"
+					Fill="{StaticResource color-1}" />
+			</Canvas>
+		</Canvas>
+	</Viewbox>
 
 </ResourceDictionary>
