--- a/x360ce.App.Beta/Resources/Icons/NavNormal.xaml
+++ b/x360ce.App.Beta/Resources/Icons/NavNormal.xaml
@@ -1,11 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 	<Viewbox x:Key="NavUpNormal" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg103"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -22,7 +18,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g101">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -48,11 +44,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavLeftNormal" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg165"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -69,7 +61,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g163">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -95,18 +87,14 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavNormal" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg9"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g7">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -122,11 +110,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavRightNormal" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg57"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -143,7 +127,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g55">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
@@ -169,11 +153,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavDownNormal" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Name="svg119"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -190,7 +170,7 @@
 			</Canvas.Resources>
 			<!--  Unknown tag: metadata  -->
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Canvas Name="g117">
+			<Canvas>
 				<Path
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					Data="M496 256c0 132.5 -107.5 240 -240 240c-132.5 0 -240 -107.5 -240 -240c0 -132.5 107.5 -240 240 -240c132.5 0 240 107.5 240 240z"
