--- a/x360ce.App.Beta/Resources/Icons/NavRecord.xaml
+++ b/x360ce.App.Beta/Resources/Icons/NavRecord.xaml
@@ -1,10 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 	<Viewbox x:Key="NavUpRecord" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -47,10 +44,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavLeftRecord" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -93,10 +87,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavRecord" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -119,10 +110,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavRightRecord" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
@@ -165,10 +153,7 @@
 	</Viewbox>
 
 	<Viewbox x:Key="NavDownRecord" x:Shared="False" Stretch="Uniform">
-		<Canvas
-			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-			Width="512"
-			Height="512">
+		<Canvas xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Width="512" Height="512">
 			<Canvas.RenderTransform>
 				<TranslateTransform X="0" Y="0" />
 			</Canvas.RenderTransform>
