--- a/x360ce.App.Beta/Controls/HidGuardianWarningUserControl.xaml
+++ b/x360ce.App.Beta/Controls/HidGuardianWarningUserControl.xaml
@@ -5,8 +5,8 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="250"
-	d:DesignWidth="400"
+	d:DesignHeight="320"
+	d:DesignWidth="640"
 	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
 	mc:Ignorable="d">
 	<Grid>
@@ -20,19 +20,16 @@
 			</TextBlock>
 			<TextBlock>Purpose of HID Guardian is to hide original controllers from games, so that only virtual controllers are visible.</TextBlock>
 			<TextBlock Margin="0,16,0,0" TextWrapping="Wrap">
-				[Install] HID Guardian only if original controller prevents virtual controller functioning properly in the game.
-			</TextBlock>
-			<TextBlock Margin="0,16,0,0" TextWrapping="Wrap">
-				Use [Uninstall] button if you want to remove HID Guardian.
+				Install HID Guardian only if original controller prevents virtual controller to function properly in the game.
+				<Label Margin="16,8,0,0">Install: Options tab ► Virtual Device tab ► HID Guardian Install button.</Label>
+				<Label Margin="16,0,0,0">Uninstall: Options tab ► Virtual Device tab ► HID Guardian Uninstall button.</Label>
 			</TextBlock>
 			<TextBlock Margin="0,16,0,0" Foreground="DarkRed" TextWrapping="Wrap">
 				DO NOT attempt to remove HID Guardian by simply deleting it from Device Manager. This could result in loosing access to your Mouse and Keyboard and you will be forced to follow Manual Uninstall Instructions below.
 			</TextBlock>
-			<TextBlock Margin="0,16,0,0">How to uninstall HID Guardian manually:</TextBlock>
-			<TextBlock Margin="16,4,0,0">1. Start your PC in Safe Mode with Networking</TextBlock>
-			<TextBlock Margin="16,4,0,0">2. Open Folder: C:\ProgramData\X360CE\HidGuardian</TextBlock>
-			<TextBlock Margin="16,4,0,0">3. Run: HidGuardian\HidGuardian_Setup.bat</TextBlock>
-			<TextBlock Margin="16,4,0,0">4. Choose Option: 2 - Uninstall.</TextBlock>
+			<TextBlock Margin="0,16,0,0" FontWeight="Bold">How to remove HID Guardian if access to your Mouse and Keyboard is lost (X360CE v4.x)</TextBlock>
+			<TextBlock Margin="16,16,0,0">
+				Instructions:<Hyperlink Click="Hyperlink_Click" NavigateUri="https://github.com/x360ce/x360ce/wiki/HID-Guardian">https://github.com/x360ce/x360ce/wiki/HID-Guardian</Hyperlink></TextBlock>
 		</StackPanel>
 	</Grid>
 </UserControl>
