--- a/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
+++ b/x360ce.Engine/JocysCom/Controls/Themes/Default.xaml
@@ -25,4 +25,48 @@
 		<Setter Property="IsReadOnly" Value="True" />
 	</Style>
 
+	<!--  Grid  -->
+
+	<Style x:Key="DataGridDefault" TargetType="DataGrid">
+		<Setter Property="BorderThickness" Value="0" />
+		<Setter Property="CanUserAddRows" Value="False" />
+		<Setter Property="CanUserDeleteRows" Value="False" />
+		<Setter Property="GridLinesVisibility" Value="Horizontal" />
+		<Setter Property="HeadersVisibility" Value="Column" />
+		<Setter Property="HorizontalGridLinesBrush" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" />
+		<Setter Property="VerticalGridLinesBrush" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" />
+		<Setter Property="VerticalScrollBarVisibility" Value="Auto" />
+	</Style>
+
+	<Style BasedOn="{StaticResource DataGridDefault}" TargetType="DataGrid" />
+
+	<!--  Grid TextBlock ReadOnly  -->
+
+	<Style x:Key="TextBlockCell" TargetType="TextBlock">
+		<Setter Property="Padding" Value="4,2,4,2" />
+		<Setter Property="Margin" Value="0,0,0,0" />
+	</Style>
+
+	<Style x:Key="TextBlockRightCell" BasedOn="{StaticResource TextBlockCell}" TargetType="TextBlock">
+		<Setter Property="TextAlignment" Value="Right" />
+	</Style>
+
+	<Style x:Key="TextBoxCell" TargetType="TextBox">
+		<Setter Property="Padding" Value="3,1,3,1" />
+		<Setter Property="Margin" Value="0,0,0,0" />
+	</Style>
+
+	<Style x:Key="TextBoxRightCell" BasedOn="{StaticResource TextBoxCell}" TargetType="TextBox">
+		<Setter Property="TextAlignment" Value="Right" />
+	</Style>
+
+	<!--  DataGridTextColumn  -->
+
+	<!--<Style x:Key="DataGridTextColumnDefault" TargetType="DataGridTextColumn">
+		<Setter Property="ElementStyle" Value="{DynamicResource TextBlockCell}" />
+		<Setter Property="EditingElementStyle" Value="{DynamicResource TextBoxCell}" />
+	</Style>
+
+	<Style BasedOn="{DynamicResource DataGridTextColumnDefault}" TargetType="DataGridTextColumn" />-->
+
 </ResourceDictionary>
