--- a/x360ce.App.Beta/Controls/PadTabPages/UserMacrosControl.xaml
+++ b/x360ce.App.Beta/Controls/PadTabPages/UserMacrosControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.UserKeyboardMapsControl"
+	x:Class="x360ce.App.Controls.UserMacrosControl"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -27,8 +27,7 @@
 			Margin="3,3,3,3"
 			HorizontalAlignment="Stretch"
 			VerticalAlignment="Stretch">
-			<TabItem Header="Direct Input To Keyboard">
-
+			<TabItem x:Name="UserMacrosTabPage" Header="User Macros">
 				<Grid VerticalAlignment="Stretch">
 					<Grid.RowDefinitions>
 						<RowDefinition Height="Auto" />
